--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .search {
 	text-align: center;
-	margin-top: 198px;
+	margin-top: 144px;
 }
 
 ul {
@@ -8,10 +8,11 @@ ul {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	text-align: right;
 }
 
 li {
-	float: left;
+	display: inline-block;
 }
 
 li a {
@@ -20,4 +21,40 @@ li a {
 	text-align:center;
 	padding: 14px 16px;
 	text-decoration: none;
+}
+
+.footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: whitesmoke;
+	text-align: center;
+}
+
+.footer ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	text-align: right;
+	display: inline-block;
+}
+
+.footer #first_section {
+	text-align: left;
+	margin-left: 30px;
+}
+
+.footer #second_section #business {
+	float: left;
+	margin-left: 14px;
+}
+
+.footer #second_section #account {
+	float: right;
+}
+
+hr {
+	border: none;
 }
